[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"
 

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
profile = "black"

[tool.black]
line-length = 88
skip-string-normalization = true