[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "mpqp"
dynamic = ["version"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
version_file = "mpqp/_version.py"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
profile = "black"

[tool.black]
line-length = 88
skip-string-normalization = true

[tool.pyright]
typeCheckingMode = "basic"
exclude = [
  "**/node_modules",
  "**/__pycache__",
  "**/.conda",
  "**/.venv"
]